// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwapTreeSerializer should serialize swap trees (isLiquid: false) 1`] = `
{
  "claimLeaf": {
    "output": "a914124b4a204760441dc802c445d4987ba1bd967e6d882083d1d7b47cd4163db23e633b81a3a6906a99a99e5acbbe4df29172f42621668cac",
    "version": 192,
  },
  "refundLeaf": {
    "output": "2010154f49ec6656fd70d28abd9bbb71633da124eda324b1bf2b28dd9686915087ad017bb1",
    "version": 192,
  },
}
`;

exports[`SwapTreeSerializer should serialize swap trees (isLiquid: true) 1`] = `
{
  "claimLeaf": {
    "output": "a914124b4a204760441dc802c445d4987ba1bd967e6d882083d1d7b47cd4163db23e633b81a3a6906a99a99e5acbbe4df29172f42621668cac",
    "version": 196,
  },
  "refundLeaf": {
    "output": "2010154f49ec6656fd70d28abd9bbb71633da124eda324b1bf2b28dd9686915087ad017bb1",
    "version": 196,
  },
}
`;
